Fix text wrapping and menu/navbar messed up on screen width 1024px (#418)

--- a/src/style.less
+++ b/src/style.less
@@ -426,7 +426,7 @@ span {
     margin-right: 5px;
     margin-top: 4px;
 
-    @media (min-width: 1024px) {
+    @media (min-width: 1025px) {
         width: 17px !important;
         height: 25px !important;
     }
@@ -445,7 +445,7 @@ span {
     font-weight: 600;
     margin: 31px 0;
 
-    @media (min-width: 1024px) {
+    @media (min-width: 1025px) {
         font-size: 18px;
     }
 
@@ -488,7 +488,7 @@ span {
     transition: background-color 150ms;
 
     &:hover {
-        @media (min-width: 1024px) {
+        @media (min-width: 1025px) {
             background-color: var(--header-link-hover);
         }
     }
@@ -2231,7 +2231,7 @@ table th {
 
 /* MEDIA QUERIES */
 
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
     main {
         margin-top: 100px;
     }
